cdrkit (1.0pre6) UNRELEASED; urgency=low

  [ Eduard Bloch ]
  * mapping of ATAPI: -> ATA: method on linux-2.6 and some code beautification
  * added a atexit handler to stop the FIFO process more reliably, since
    Schilling's constructs seem to terminate the application on too many
    places
  * print Burnfree state/preparation messages only with high verbosity

 -- Eduard Bloch <blade@debian.org>  Wed, 15 Nov 2006 12:30:01 +0100

cdrkit (1.0pre5) RELEASED; urgency=low

  [ Eduard Bloch ]
  * added better check for capability.h and FATAL_ERROR if it's missing on Linux
  * wodim.1 updates, ie. moved suid howto to README.suidroot, Linux bashing to
    README.linux, more notes about non-root usage
  * more carefull description of the role of previous developer and his own
    project
  * fixed libmagic detection
  * rewrote README.mkisofs, README.win32
  * better track numbers extraction command in cdda2ogg/cdda2mp3
  * reenabled (forgotten) support for libedc
  * table formating fixes in cdda2wav.1, helps small terminals
  * AIX 5l port
  * killing FIFO process on ungraceful termination
  * scsi-linux-sg.c: skipping unallowed devices, cleanup/consolidation of the
    old workaround(s) for ATA now for SCSI too
  * renamed error function to schily_error because it started to wreak random
    havoc after harmless header moving (conflict with incompatible GNU version)
  * restored scsi-remote.c compilation, moved to libscg sources, used instead
    of rdummy.c
  * added optional omiting of DMA speed tests

  [ Eugen Dedu ]
  * corrections and constructive help on cdda2ogg

  [ Vladimir Nadvornik ]
  * enabled CLONE feature in wodim's config

  [ Modestas Vainius ]
  * dropped . from the include path and fixed mkisofs source to use the local
    headers

  [ Lorenz Minder ]
  * Fix of the joliet_strlen signature
  * Code refactoring around *cvt* declarations to make the conditional
    compilation more reliable, especially on BSD and AIX