@@ -7,6 +7,9 @@ cdrkit (1.0pre6) UNRELEASED; urgency=low
     places
   * print Burnfree state/preparation messages only with high verbosity
 
+  [ Dennis Vshivkov ]
+  * sorted display of files when needed
+
  -- Eduard Bloch <blade@debian.org>  Wed, 15 Nov 2006 12:30:01 +0100
 
 cdrkit (1.0pre5) RELEASED; urgency=low
